*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated dependencies and build scripts.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Initial release.
