@@ -80,27 +80,27 @@ namespace lsp
             {
                 OVS_NONE,
 
-                OVS_HALF_2X2,
-                OVS_HALF_2X3,
-                OVS_HALF_3X2,
-                OVS_HALF_3X3,
-                OVS_HALF_4X2,
-                OVS_HALF_4X3,
-                OVS_HALF_6X2,
-                OVS_HALF_6X3,
-                OVS_HALF_8X2,
-                OVS_HALF_8X3,
+                OVS_HALF_2X16BIT,
+                OVS_HALF_2X24BIT,
+                OVS_HALF_3X16BIT,
+                OVS_HALF_3X24BIT,
+                OVS_HALF_4X16BIT,
+                OVS_HALF_4X24BIT,
+                OVS_HALF_6X16BIT,
+                OVS_HALF_6X24BIT,
+                OVS_HALF_8X16BIT,
+                OVS_HALF_8X24BIT,
 
-                OVS_FULL_2X2,
-                OVS_FULL_2X3,
-                OVS_FULL_3X2,
-                OVS_FULL_3X3,
-                OVS_FULL_4X2,
-                OVS_FULL_4X3,
-                OVS_FULL_6X2,
-                OVS_FULL_6X3,
-                OVS_FULL_8X2,
-                OVS_FULL_8X3,
+                OVS_FULL_2X16BIT,
+                OVS_FULL_2X24BIT,
+                OVS_FULL_3X16BIT,
+                OVS_FULL_3X24BIT,
+                OVS_FULL_4X16BIT,
+                OVS_FULL_4X24BIT,
+                OVS_FULL_6X16BIT,
+                OVS_FULL_6X24BIT,
+                OVS_FULL_8X16BIT,
+                OVS_FULL_8X24BIT,
 
                 OVS_DEFAULT     = OVS_NONE
             };
