@@ -66,29 +66,29 @@ namespace lsp
 
         static port_item_t limiter_ovs_modes[] =
         {
-            { "None",           "oversampler.none"      },
+            { "None",           "oversampler.none"          },
 
-            { "Half x2(2L)",    "oversampler.half.2x2"  },
-            { "Half x2(3L)",    "oversampler.half.2x3"  },
-            { "Half x3(2L)",    "oversampler.half.3x2"  },
-            { "Half x3(3L)",    "oversampler.half.3x3"  },
-            { "Half x4(2L)",    "oversampler.half.4x2"  },
-            { "Half x4(3L)",    "oversampler.half.4x3"  },
-            { "Half x6(2L)",    "oversampler.half.6x2"  },
-            { "Half x6(3L)",    "oversampler.half.6x3"  },
-            { "Half x8(2L)",    "oversampler.half.8x2"  },
-            { "Half x8(3L)",    "oversampler.half.8x3"  },
+            { "Half x2/16 bit", "oversampler.half.2x16bit"  },
+            { "Half x2/24 bit", "oversampler.half.2x24bit"  },
+            { "Half x3/16 bit", "oversampler.half.3x16bit"  },
+            { "Half x3/24 bit", "oversampler.half.3x24bit"  },
+            { "Half x4/16 bit", "oversampler.half.4x16bit"  },
+            { "Half x4/24 bit", "oversampler.half.4x24bit"  },
+            { "Half x6/16 bit", "oversampler.half.6x16bit"  },
+            { "Half x6/24 bit", "oversampler.half.6x24bit"  },
+            { "Half x8/16 bit", "oversampler.half.8x16bit"  },
+            { "Half x8/24 bit", "oversampler.half.8x24bit"  },
 
-            { "Full x2(2L)",    "oversampler.full.2x2"  },
-            { "Full x2(3L)",    "oversampler.full.2x3"  },
-            { "Full x3(2L)",    "oversampler.full.3x2"  },
-            { "Full x3(3L)",    "oversampler.full.3x3"  },
-            { "Full x4(2L)",    "oversampler.full.4x2"  },
-            { "Full x4(3L)",    "oversampler.full.4x3"  },
-            { "Full x6(2L)",    "oversampler.full.6x2"  },
-            { "Full x6(3L)",    "oversampler.full.6x3"  },
-            { "Full x8(2L)",    "oversampler.full.8x2"  },
-            { "Full x8(3L)",    "oversampler.full.8x3"  },
+            { "Full x2/16 bit", "oversampler.full.2x16bit"  },
+            { "Full x2/24 bit", "oversampler.full.2x24bit"  },
+            { "Full x3/16 bit", "oversampler.full.3x16bit"  },
+            { "Full x3/24 bit", "oversampler.full.3x24bit"  },
+            { "Full x4/16 bit", "oversampler.full.4x16bit"  },
+            { "Full x4/24 bit", "oversampler.full.4x24bit"  },
+            { "Full x6/16 bit", "oversampler.full.6x16bit"  },
+            { "Full x6/24 bit", "oversampler.full.6x24bit"  },
+            { "Full x8/16 bit", "oversampler.full.8x16bit"  },
+            { "Full x8/24 bit", "oversampler.full.8x24bit"  },
 
             { NULL, NULL }
         };
