@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.13 ===
+* Significantly improved precision of oversampling functions.
 * Updated build scripts and dependencies.
 
 === 1.0.12 ===
